<resources>
    <string name="app_name">Jiwangga</string>
    <string name="splash_screen">Splash Screen</string>


    <string name="image_shape">Image Shape</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="image_story">Image Story</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_in">Sign In</string>
    <string name="image_story_preview">Image Story Preview</string>
    <string name="upload">Upload</string>
    <string name="description_more">Description…</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_story">Add Story</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>